--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,12 @@
 [urls]
-#Suggested genome to use for variant calling using BWA https://lh3.github.io/2017/11/13/which-human-reference-genome-to-use
+#This is a collection of relevant urls for this project for downloading data (genomeAssembly/exomes)
+
+#Suggested genome to use for variant calling using BWA. For more info: https://lh3.github.io/2017/11/13/which-human-reference-genome-to-use
 genome_url = ftp://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/000/001/405/GCA_000001405.15_GRCh38/seqs_for_alignment_pipelines.ucsc_ids/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna.gz
-#Original Genome hg38.fa.gz - "Soft-masked" assembly sequence in one file.
+#Original Genome hg38.fa.gz - "Soft-masked" assembly sequence in one file. for more info: http://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips
 ucsc_genome_url = http://hgdownload.soe.ucsc.edu/goldenPath/hg38/bigZips/hg38.fa.gz
- 
+#location of exome on AWS server with free access. Probably better download speads if you use the aws client. For more info: https://trace.ncbi.nlm.nih.gov/Traces/?view=run_browser&acc=SRR099960&display=data-access
+aws_exome = https://sra-pub-run-odp.s3.amazonaws.com/sra/SRR099960/SRR099960
+#location of exome on EBI servers. For more info: www.internationalgenome.org/data-portal/sample/HG00157
+ebi_exome_1 = ftp://ftp.sra.ebi.ac.uk/vol1/fastq/SRR099/SRR099960/SRR099960_1.fastq.gz
+ebi_exome_2 = ftp://ftp.sra.ebi.ac.uk/vol1/fastq/SRR099/SRR099960/SRR099960_1.fastq.gz
